_build/html/reports/basic_python.log
Traceback (most recent call last):
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/bcaffo/miniconda3/envs/ds4bio/lib/python3.9/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Some of the basic programming types in python are ints, floats, complex and Boolean.  The command `type` tells us which. Here's an example with 10 represented in 3 ways (int, float and complex)  and the logical value `True`
------------------

[0;36m  File [0;32m"/tmp/ipykernel_3537/2460831194.py"[0;36m, line [0;32m1[0m
[0;31m    Some of the basic programming types in python are ints, floats, complex and Boolean.  The command `type` tells us which. Here's an example with 10 represented in 3 ways (int, float and complex)  and the logical value `True`[0m
[0m         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2460831194.py, line 1)

